fix: update workflow files

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,8 @@
 name: Release
 on:
   push:
-    branches:
-      - master
-      - next
-      - beta
-      - "*.x"
-      - main
+    tags:
+      - 'v*'
 
 permissions:
   contents: write
@@ -30,19 +26,8 @@ jobs:
           node-version: 'lts/*'
           registry-url: https://npm.pkg.github.com/
           scope: '@zwkang-dev'
-          
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 6.0.2
-
-      # Install dependencies (required by Run tests step)
-      - name: Install dependencies
-        run: pnpm i
 
       # Release with semantic-release
-      - name: Release
-        run: npx release
+      - run: npx changelogithub
         env:
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
