--- a/.github/workflows/learn-publish-flow.yml
+++ b/.github/workflows/learn-publish-flow.yml
@@ -21,5 +21,6 @@ jobs:
           node-version: 'lts/*'
           registry-url: https://npm.pkg.github.com/
           scope: '@zwkang-dev'
+      - run: pnpm install
       - run: npx build
       - run: npx test
