feat: add script

--- a/.github/workflows/learn-publish-flow.yml
+++ b/.github/workflows/learn-publish-flow.yml
@@ -29,5 +29,5 @@ jobs:
               args: [--frozen-lockfile, --strict-peer-dependencies]
             - args: [--global, gulp, prettier, typescript]
       - run: pnpm install
-      - run: npx build
-      - run: npx test
+      - run: pnpm build
+      - run: pnpm test
